dvh para mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,10 @@ body {
 
 
 @media (max-width: 615px) {
+    body {
+        height: 100dvh;
+    }
+    
     .relogio {
         flex-direction: column;
         align-items: center;
